@@ -14,7 +14,7 @@
 
         <div class="sheet form-sheet form-inputs">
           <div class="sheet-inner">
-            <%= f.control_group :email do |f| %>
+            <%= f.form_group :email do |f| %>
               <%= f.label :email, class: "form-label" %>
               <%= f.email_field :email, autofocus: true, class: "col-md-3" %>
               <%= f.error_messages %>
