@@ -1,6 +1,6 @@
 module Dresssed
   module Ives
-    VERSION = "1.0.0.rc20"
+    VERSION = "1.0.0.rc21"
     STYLES = %w(blue black amber)
   end
 end
